# downloader_services

./: PROJECT_SUMMARY.md  README.md  STRUCTURE.md  dashboard_app.py  events_4003632.csv  events_4003641.csv  events_4003644.csv  events_4003652.csv  events_4003656.csv  insertion_log.txt  match_stats.csv  pyproject.toml  requirements.txt  team_match_stats.csv  team_season_stats_318_1522.csv
data/: competitions.json
database/: db_schema.sql
docs/: DATABASE_README.md  DB_IMPLEMENTATION_SUMMARY.md  DB_SCHEMA_DIAGRAM.md  FINAL_SUCCESS_REPORT.md  LOCAL_TESTING_GUIDE.md  PIPELINE_ARCHITECTURE.md  PLAYER_INGESTION_GUIDE.md  PLAYER_INGESTION_SUCCESS.md  PROJECT_COMPLETE.md  SCHEMA_UPDATE_SUMMARY.md  TEST_SUCCESS_SUMMARY.md
exports/: competition_ratings.csv  competition_ratings.xlsx  process_competitions.py
match_data/: events_4003626.csv  events_4003664.csv  stats_4003626.csv  stats_4003632.csv  stats_4003641.csv  stats_4003644.csv  stats_4003656.csv  stats_4003664.csv
matches/2025-07-25/: events.csv  (+4 more)
seasonal_stats/: player_season_stats.csv  team_season_stats.csv
skillcorner/: skillcorner_api_test.py
statsbomb_legacy/: PASSMAP_IMPLEMENTATION.md  PASSMAP_README.md  PASSMAP_SUMMARY.md  PASSMAP_VISUAL_GUIDE.md  PDF_PASSMAP_UPDATE.md  README_DASHBOARD.md  dashboard_app.py  get_aggregate_stats_for_games.py  get_match_stats.py  get_player_match_stats.py  process_match_events.py  statsbomb_data_downloader.py  test.py  test_race_chart.py
tmroom_legacy/: main.py  test_comps.py  tmroom_api_testing.py
transferroom_service/: env.template  ingest_pipeline.py
(+130 files in other folders)
