[project]
name = "downloader-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "openpyxl>=3.1.2",
    "psycopg[binary]>=3.1.18",
    "urllib3>=2.2.0",
    "statsbombpy>=1.16.0",
    "streamlit>=1.53.1",
    "plotly>=6.5.2",
    "reportlab>=4.4.9",
    "kaleido>=1.2.0",
    "pillow>=12.1.0",
]
